# vertex-churn-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: inference-patterns.md  phase-0-setup.md  phase-1-data.md  phase-2-modeling.md  phase-3-deploy.md  phase-4-batch.md  presentation-walkthrough.md  project-walkthrough.md  train-code-map.md
experiments/baseline/: README.md  summary.json
models/: README.md  summary.json
models/lightgbm/: metrics.json
models/logreg/: metrics.json
models/probe_audit/: probe_audit.json
models/probe_selected/lightgbm/: metrics.json
models/probe_selected/logreg/: metrics.json
models/probe_selected/random_forest/: feature_importance.json  metrics.json
models/probe_selected/xgboost/: metrics.json
models/random_forest/: feature_importance.json  metrics.json  pr_curve.json
models/random_forest/shap/: shap_importance.json
models/xgboost/: metrics.json
notebooks/: 01_eda.ipynb
scripts/: load_to_bq.sh  setup_gcp.sh
serving/churn-rf/: CHANGELOG.md
serving/churn-rf/v1/: predictor.py  requirements.txt
sql/: 01_explore.sql  02_predictions.sql  03_predictions_latest.sql
src/: batch.py  cache_warm.py  champion.py  config.py  data.py  deploy.py  inspect.py  package.py  predict.py  preprocess.py  train.py
tests/: test_batch.py  test_cache_warm.py  test_champion.py  test_deploy.py  test_inspect.py  test_package.py  test_predict.py  test_preprocess.py  test_serving_predictor.py  test_train.py
