[project]
name = "vertex-churn-pipeline"
version = "0.1.0"
description = "Churn prediction on GCP: BigQuery -> Vertex AI Model Registry -> endpoint."
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    # Core ML
    "pandas>=2.0,<3",
    "scikit-learn>=1.3,<2",
    "xgboost>=2.0,<3",
    "lightgbm>=4.0,<5",
    "joblib>=1.3,<2",
    # GCP
    "google-cloud-bigquery>=3.20,<4",
    "google-cloud-bigquery-storage>=2.24,<3",
    "google-cloud-storage>=2.14,<3",
    "google-cloud-aiplatform>=1.50,<2",
    "db-dtypes>=1.2,<2",
    "pyarrow>=15.0",
    # EDA & viz
    "matplotlib>=3.11,<4",
    "seaborn>=0.13,<1",
    # Local dev / notebooks
    "python-dotenv>=1.0,<2",
    "jupyter>=1.0,<2",
    "ipykernel>=6.29,<7",
    "feature-engine>=1.8,<2",
    "shap>=0.45,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[tool.uv]
# Lockfile (uv.lock) is committed for reproducible installs via `uv sync`.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
